# troverai

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
SperimenteRAI/: README.md  jsonfix.py  raiplay.py  raiplay_auth.py
src/troverai/: __init__.py  __main__.py  api.py  cli.py  commands.py  output.py  utils.py
