[project]
name = "troverai"
version = "0.1.0"
description = "TroveRAI cerca la programmazione TV RAI"
authors = [
    {name = "Gianluca Mascolo",email = "gianluca.mascolo@gmail.com"}
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
